--- a/web/notfound/notfound.html
+++ b/web/notfound/notfound.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
 <html >
 <head>
-<title>Ò³Ãæ²»´æÔÚ</title>
+<title>é¡µé¢ä¸å­˜åœ¨</title>
+<meta charset="UTF-8">
 <!-- jquery -->	
 <script src="js/jquery-2.2.0.min.js"></script>
 <!-- <script src="js/jquery-stars.js" type="text/javascript"></script> -->
@@ -21,7 +22,7 @@ body{
 }
 #notfound_fhsy{
 	color:#fff;
-	font-family:"»ªÎÄĞĞ¿¬";
+	font-family:"åæ–‡è¡Œæ¥·";
 	font-size:20px;
 	position:absolute;
 	top:48.5%;
@@ -48,7 +49,7 @@ body{
 </style>
 <body class="custom-background">
 	<div id="main">
-		<div id="notfound_fhsy" onclick="logo_dj()">·µ»ØÊ×Ò³</div>
+		<div id="notfound_fhsy" onclick="logo_dj()">è¿”å›é¦–é¡µ</div>
 	</div>
 	<div class="snow-container" style="position:fixed;top:0;left:0;width:100%;height:100%;pointer-events:none;z-index:100001;"></div>	
 </body>
@@ -56,16 +57,16 @@ body{
 <script>
 $('#main').width($(window).width()-35);
 $('#main').height($(window).height()-35);
-//¶¨ÒåÒ³Ãæ¿í¸ß
+//å®šä¹‰é¡µé¢å®½é«˜
 $("body").css('width',$(window).width());
 $("body").css('height',$(window).height());
 
-//»ñÈ¡Í¼Æ¬Â·¾¶
+//è·å–å›¾ç‰‡è·¯å¾„
 var url =  "images/notfound_bg.jpg";
 $("body").css("background-image","url(" + url + ")");
 
 
-//·µ»ØµÇÂ¼½çÃæ·½·¨
+//è¿”å›ç™»å½•ç•Œé¢æ–¹æ³•
 function logo_dj(){
 	window.location.href="${pageContext.request.contextPath}/";	
 }
