--- a/newYear/index.html
+++ b/newYear/index.html
@@ -18,7 +18,7 @@
 			<div class="index-fish"></div>
 		</div>
 		<div class="index-btn">
-				<input id="uploaderInput" class="uploader-input" type="file" accept="image/*" capture="camera" multiple="" />
+				<input id="uploaderInput" class="uploader-input" type="file" accept="image/*" multiple="" />
 			</div>
 		</div>
 	</div>
